--- a/vignettes/endespe_v01.Rmd
+++ b/vignettes/endespe_v01.Rmd
@@ -1,6 +1,5 @@
 ---
 title: "endespe_v01"
-author: "Andree Valle Campos"
 date: "`r Sys.Date()`"
 output: 
   rmarkdown::html_vignette:
@@ -26,114 +25,110 @@ knitr::opts_chunk$set(
 library(ENDES.PE)
 library(srvyr)
 library(tidyverse)
-theme_set(theme_bw())
+library(sjlabelled)
+library(kableExtra)
+library(scales)
 ```
 
 # ENDES.PE
 
-## importar base de datos
+## Importar bases de datos
 
-```{r}
-year <- 2018
+```{r, echo=FALSE}
+año <- 2017
 
-#household
-hogar <- consulta_endes(periodo = year, 
-                        codigo_modulo = 64, 
-                        base = "RECH0", 
-                        guardar = FALSE, 
-                        codificacion = NULL) #%>% as_factor()
+# Household
+hogar <- consulta_endes(periodo = año, codigo_modulo = 64, base = "RECH0", 
+                        guardar = FALSE, codificacion = "latin1") 
 
-vivienda <- consulta_endes(periodo = year, codigo_modulo = 65, base = "RECH23", guardar = FALSE, codificacion = NULL)
-salud <- consulta_endes(periodo = year, codigo_modulo = 414, base = "CSALUD01", guardar = FALSE, codificacion = NULL)
+vivienda <- consulta_endes(periodo = año, codigo_modulo = 65, base = "RECH23",
+                           guardar = FALSE, codificacion = "latin1")
 
-#subject
-persona <- consulta_endes(periodo = year, codigo_modulo = 64, base = "RECH1", guardar = FALSE, codificacion = NULL)
-educacion <- consulta_endes(periodo = year, codigo_modulo = 64, base = "RECH4", guardar = FALSE, codificacion = NULL)
-mujer <- consulta_endes(periodo = year, codigo_modulo = 74, base = "RECH5", guardar = FALSE, codificacion = NULL)
 
-#household
-anemia <- consulta_endes(periodo = year, codigo_modulo = 74, base = "RECH6", guardar = FALSE, codificacion = NULL)
+# Subjects
+persona <- consulta_endes(periodo = año, codigo_modulo = 64, base = "RECH1", 
+                          guardar = FALSE, codificacion = "latin1")
 
+salud <- consulta_endes(periodo = año, codigo_modulo = 414, base = "CSALUD01",
+                        guardar = FALSE, codificacion = "latin1")
+
+mujer_obs <- consulta_endes(periodo = 2017, codigo_modulo = 67, 
+                            base = "RE223132", guardar = FALSE,
+                            codificacion = "latin1")
+
+mujer_lac <- consulta_endes(periodo = 2017, codigo_modulo = 70, base = "REC42",
+                            guardar = FALSE, codificacion = "latin1")
+
+mujer_ant <- consulta_endes(periodo = 2017, codigo_modulo = 74, base = "RECH5",
+                            guardar = FALSE, codificacion = "latin1")
 ```
 
-## generar diccionarios de variables
+## Diccionarios de variables
 
 ```{r}
-diccionario_encuesta(hogar)
-# diccionario_encuesta(vivienda)
-# diccionario_encuesta(salud)
-# diccionario_encuesta(persona)
-# diccionario_encuesta(educacion)
-# diccionario_encuesta(anemia)
-# diccionario_encuesta(mujer)
+diccionario_encuesta(salud)
+  
 ```
 
-## unir bases
+## Unión de bases
 
 ```{r}
-# unimos base de personas ("individual")
-union_individuo <- unir_endes(base1 = persona, 
-                              base2 = salud, 
+# Unimos base de personas ("individual")
+union_individuo1 <- unir_endes(base1 = persona, base2 = salud, 
+                              tipo_union = "individual") %>% 
+  unir_endes(base2 = mujer_ant, tipo_union = "individual")
+
+union_individuo2 <- unir_endes(base1 = mujer_obs, base2 = mujer_lac,
+                               tipo_union = "individual")
+
+union_individuo <- unir_endes(base1 = union_individuo1, base2 = union_individuo2,
                               tipo_union = "individual")
-# unimos base de Hogar y vivienda ("hogar") 
-union_vivienda <- unir_endes(base1 = hogar, 
-                             base2 = vivienda, 
-                             tipo_union = "hogar") %>% 
-  unir_endes(base1 = .,
-             base2 = mujer,
-             tipo_union = "hogar")
+
+# Unimos base de Hogar y vivienda ("hogar") 
+union_vivienda <- unir_endes(base1 = hogar, base2 = vivienda, 
+                             tipo_union = "hogar") 
+
+# Union final de individuos con base de Hogares ("hogar")
+base_final <- unir_endes(base1 = union_vivienda, base2 = union_individuo,
+                         tipo_union = "hogar")
+
 ```
 
-## crear cronicas
 
 ```{r}
-union_individuo %>% count(QSRESINF)
-union_individuo %>% count(QS902)
-```
+base_final <- base_final %>% 
+  filter(QSRESINF == 1)
 
-```{r}
-final02_db <- unir_endes(base1 = union_vivienda,
-                         base2 = union_individuo,
-                         tipo_union = "hogar") %>% 
-  #filtrar por cuestionario salud
-  filter(QSRESINF == 1) %>% 
-  #crear variables
-  mutate(
-    
+base <- base_final %>% 
+  filter(QSRESINF == 1) %>%   #filtrar por cuestionario salud
+  mutate(                     #crear variables
     #hipertension
     PAMS = (QS905S+QS903S)/2, # Obtenemos la PAM sistólica de dos mediciones
     PAMD = (QS905D+QS903D)/2, # Obtenemos la PAM diastólica de dos mediciones
     HIPERTENSION  =  (PAMS>=140) | (PAMD>=90), # Definimos el criterio de HTA
-    
     #obesidad
     PESO = ifelse(QS902 == 1 & (QS900 >= 1 & QS900 < 999), QS900,
-                  ifelse(QS902 == 4, HA2/10, NA)),
+                       ifelse(QS902 == 4, HA2/10, NA)),
     TALLA = ifelse(QS902 == 1 & (QS901 >= 1 & QS901 < 999), QS901,
-                   ifelse(QS902 == 4, HA3/10, NA)),
+                        ifelse(QS902 == 4, HA3/10, NA)),
     ha13tmp = case_when(HA13 == 0 ~ 1,
-                        HA13 == 3 ~ 2,
-                        HA13 == 4 ~ 3,
-                        HA13 == 6 ~ 6),
+                             HA13 == 3 ~ 2,
+                             HA13 == 4 ~ 3,
+                             HA13 == 6 ~ 6),
     RQS902 = ifelse(QS902 == 4, ha13tmp, QS902),
     IMC = PESO/(TALLA^2)*10000,
     OBESIDAD = IMC >= 30, 
     SOBREPESO = IMC >= 25 & IMC < 30,
-    
     SEXO = HV104,
     AREA_RESIDENCIA = HV025, 
     QUINTIL_BIENESTAR = HV270, 
     REGION_NATURAL = SHREGION,
-    
-    #de diseño
+    # Diseño de encuesta
     CONGLOMERADO=HV001,
     ESTRATO=HV022,
     PONDERACION=HV005/1000000
-  )
-```
-
-```{r}
-final02_db %>% count(HIPERTENSION)
-final02_db %>% count(OBESIDAD)
+  ) %>% 
+  filter(V213 != 1 | is.na(V213), RQS902 == 1)
 ```
 
 # srvyr
@@ -141,60 +136,36 @@ final02_db %>% count(OBESIDAD)
 ## setear base según diseño muestral
 
 ```{r}
-design_hip <- final02_db %>% 
-  as_factor() %>% #importar variable+value labels
-  #filter(!is.na(OBESIDAD)) %>% #CRITICAL!
-  as_survey_design(id = CONGLOMERADO, 
-                   strata = ESTRATO, 
-                   weights= PONDERACION)
-
-design_obe <- final02_db %>% 
-  as_factor() %>% #importar variable+value labels
-  filter(!is.na(OBESIDAD)) %>% #CRITICAL!
-  as_survey_design(id = CONGLOMERADO, 
-                   strata = ESTRATO, 
-                   weights= PONDERACION)
+modelo <- base %>% 
+  as_survey_design(id = CONGLOMERADO, strata = ESTRATO, weights = PONDERACION)
 
 ```
 
-## tablas de prevalencia
+## Tablas de prevalencia
 
-```{r,results='asis'}
-hip <- design_hip %>%
-  group_by(QUINTIL_BIENESTAR,SEXO,HIPERTENSION) %>%
-  summarize(proportion = survey_mean(vartype = "ci"),
-            total = survey_total(),
-            n = unweighted(n())) %>% 
-  filter(HIPERTENSION==TRUE) %>% 
-  mutate(HIPERTENSION=case_when(TRUE ~ "Hipertensión")) %>% 
-  rename("enf"=HIPERTENSION)
+```{r}
 
-hip %>% 
-  select(QUINTIL_BIENESTAR,SEXO,starts_with("prop")) %>% 
-  mutate(proportion=proportion*100,
-         proportion_low=proportion_low*100,
-         proportion_upp=proportion_upp*100) %>% 
-  mutate_if(is.numeric, round, 1) %>% 
-  knitr::kable()
+hip <- modelo %>%  
+  group_by(QUINTIL_BIENESTAR,SEXO) %>% 
+  summarise(proportion = survey_mean(HIPERTENSION, vartype = "ci")) %>% 
+  mutate(QUINTIL_BIENESTAR = as_factor(QUINTIL_BIENESTAR),
+         SEXO = as_character(SEXO), enf = "Hipertensión")
+
+hip %>%  
+  mutate_at(3:5, function(x) x * 100) %>% 
+  kable()
 ```
 
 ```{r}
-obe <- design_obe %>%
-  group_by(QUINTIL_BIENESTAR,SEXO,OBESIDAD) %>%
-  summarize(proportion = survey_mean(vartype = "ci"),
-            total = survey_total(),
-            n = unweighted(n())) %>% 
-  filter(OBESIDAD==TRUE) %>% 
-  mutate(OBESIDAD=case_when(TRUE ~ "Obesidad")) %>% 
-  rename("enf"=OBESIDAD)
+obe <- modelo %>%  
+  group_by(QUINTIL_BIENESTAR,SEXO) %>% 
+  summarise(proportion = survey_mean(OBESIDAD, vartype = "ci")) %>% 
+  mutate(QUINTIL_BIENESTAR = as_factor(QUINTIL_BIENESTAR),
+         SEXO = as_character(SEXO), enf = "Obesidad") 
 
 obe %>% 
-  select(QUINTIL_BIENESTAR,SEXO,starts_with("prop")) %>% 
-  mutate(proportion=proportion*100,
-         proportion_low=proportion_low*100,
-         proportion_upp=proportion_upp*100) %>% 
-  mutate_if(is.numeric, round, 1) %>% 
-  knitr::kable()
+  mutate_at(3:5, function(x) x * 100) %>%
+  kable()
 ```
 
 ## grafico: cronicas
@@ -204,15 +175,14 @@ union_all(hip,obe) %>%
   mutate(SEXO=fct_rev(SEXO)) %>% 
   ggplot(aes(x = QUINTIL_BIENESTAR,
              y = proportion,
-             colour=SEXO)) +
-  geom_point(position=position_dodge(width=0.5)) +
-  geom_errorbar(aes(ymin=proportion_low,ymax=proportion_upp),
-                position=position_dodge(width=0.5),
-                width=.2) +
-  facet_grid(~enf) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
-  scale_y_continuous(labels = scales::percent_format(accuracy = 1),limits = c(0,0.35)) +
-  labs(title = "Enfermedades crónicas (ENDES, 2018)",
+             colour= SEXO)) +
+  geom_point(size = 2) +
+  facet_grid(enf ~ SEXO) +
+  geom_errorbar(width=.1, 
+                aes(ymin= proportion_low, ymax= proportion_upp))+
+  scale_y_continuous(labels = scales::percent_format(accuracy = 1), 
+                     limits = c(0,0.35)) +
+  labs(title = "Enfermedades crónicas (ENDES, 2017)",
        subtitle = "Según sexo y quintil de bienestar",
        colour="Sexo",
        x = "Quintil de bienestar", 
